@@ -1,6 +1,6 @@
 package io.ngshop.catalog.service.impl;
 
-import io.ngshop.catalog.dto.ProductDTO;
+import io.ngshop.catalog.dto.ProductDto;
 import io.ngshop.catalog.mapper.ProductMapper;
 import io.ngshop.catalog.model.Product;
 import io.ngshop.catalog.repository.ProductRepository;
@@ -11,7 +11,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,34 +18,40 @@ public class ProductServiceImpl implements ProductService {
     private final ProductRepository productRepository;
     private final ProductMapper productMapper;
 
-
-    @Override
-    public ResponseEntity<ProductDTO> createProduct(ProductDTO productDto) {
+    public ResponseEntity<ProductDto> create(ProductDto productDto) {
         Product product = productMapper.toEntity(productDto);
         Product save = productRepository.save(product);
         return ResponseEntity.ok(productMapper.toDto(save));
     }
 
-
-    @Override
-    public ResponseEntity<ProductDTO> getProductById(ObjectId id) {
-        return null;
-    }
-
-    @Override
-    public ResponseEntity<List<ProductDTO>> getAllProducts() {
+    public ResponseEntity<List<ProductDto>> getProducts() {
         List<Product> all = productRepository.findAll();
-        List<ProductDTO> list = all.stream().map(productMapper::toDto).collect(Collectors.toList());
+        List<ProductDto> list = all.stream().map(productMapper::toDto).toList();
         return ResponseEntity.ok(list);
     }
 
     @Override
-    public ResponseEntity<ProductDTO> updateProduct(ProductDTO productDTO) {
+    public ResponseEntity<ProductDto> getProductById(ObjectId id) {
+        return null;
+    }
+
+    @Override
+    public ResponseEntity<ProductDto> createProduct(ProductDto productDTO) {
+        return null;
+    }
+
+    @Override
+    public ResponseEntity<ProductDto> updateProduct(ProductDto productDTO) {
         return null;
     }
 
     @Override
     public ResponseEntity<Void> deleteProduct(Long id) {
+        return null;
+    }
+
+    @Override
+    public ResponseEntity<List<ProductDto>> getAllProducts() {
         return null;
     }
 }
